bootstrap/etherpad/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: etherpad
  labels:
    app: etherpad
